target/generated-sources/antlr4/com/bricolagem/BricolagemParser.java
// Generated from com/bricolagem/BricolagemParser.g4 by ANTLR 4.13.1
package com.bricolagem;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BricolagemParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROJETO_MAKER=1, NIVEL=2, TEMA=3, OBJETIVO_ENSINO=4, OBJETIVO_APRENDIZAGEM=5, 
		OBJETIVO_PESQUISA=6, OBJETIVO_EDUCACIONAL=7, ATIVIDADES=8, AVALIACAO=9, 
		RECURSOS=10, CONFORMIDADE_BNCC=11, DESCRICAO=12, DURACAO=13, MINUTOS=14, 
		PASSOS=15, CRITERIOS=16, INSTRUMENTOS=17, ABRE_CHAVE=18, FECHA_CHAVE=19, 
		DOIS_PONTOS=20, VIRGULA=21, ABRE_COLCHETE=22, FECHA_COLCHETE=23, STRING=24, 
		NUMERO=25, ID=26, WS=27;
	public static final int
		RULE_projetoMaker = 0, RULE_nivel = 1, RULE_tema = 2, RULE_objetivos = 3, 
		RULE_listaObjetivosEnsino = 4, RULE_objetivoEnsino = 5, RULE_listaObjetivosAprendizagem = 6, 
		RULE_objetivoAprendizagem = 7, RULE_listaObjetivosPesquisa = 8, RULE_objetivoPesquisa = 9, 
		RULE_listaObjetivosEducacionais = 10, RULE_objetivoEducacional = 11, RULE_atividades = 12, 
		RULE_listaAtividades = 13, RULE_atividade = 14, RULE_avaliacao = 15, RULE_recursos = 16, 
		RULE_conformidadeBNCC = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"projetoMaker", "nivel", "tema", "objetivos", "listaObjetivosEnsino", 
			"objetivoEnsino", "listaObjetivosAprendizagem", "objetivoAprendizagem", 
			"listaObjetivosPesquisa", "objetivoPesquisa", "listaObjetivosEducacionais", 
			"objetivoEducacional", "atividades", "listaAtividades", "atividade", 
			"avaliacao", "recursos", "conformidadeBNCC"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ProjetoMaker'", "'Nivel'", "'Tema'", "'ObjetivoEnsino'", "'ObjetivoAprendizagem'", 
			"'ObjetivoPesquisa'", "'ObjetivoEducacional'", "'Atividades'", "'Avaliacao'", 
			"'Recursos'", "'ConformidadeBNCC'", "'Descricao'", "'Duracao'", "'minutos'", 
			"'Passos'", "'Criterios'", "'Instrumentos'", "'{'", "'}'", "':'", "','", 
			"'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROJETO_MAKER", "NIVEL", "TEMA", "OBJETIVO_ENSINO", "OBJETIVO_APRENDIZAGEM", 
			"OBJETIVO_PESQUISA", "OBJETIVO_EDUCACIONAL", "ATIVIDADES", "AVALIACAO", 
			"RECURSOS", "CONFORMIDADE_BNCC", "DESCRICAO", "DURACAO", "MINUTOS", "PASSOS", 
			"CRITERIOS", "INSTRUMENTOS", "ABRE_CHAVE", "FECHA_CHAVE", "DOIS_PONTOS", 
			"VIRGULA", "ABRE_COLCHETE", "FECHA_COLCHETE", "STRING", "NUMERO", "ID", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BricolagemParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BricolagemParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProjetoMakerContext extends ParserRuleContext {
		public TerminalNode PROJETO_MAKER() { return getToken(BricolagemParser.PROJETO_MAKER, 0); }
		public TerminalNode ABRE_CHAVE() { return getToken(BricolagemParser.ABRE_CHAVE, 0); }
		public NivelContext nivel() {
			return getRuleContext(NivelContext.class,0);
		}
		public TemaContext tema() {
			return getRuleContext(TemaContext.class,0);
		}
		public ObjetivosContext objetivos() {
			return getRuleContext(ObjetivosContext.class,0);
		}
		public AtividadesContext atividades() {
			return getRuleContext(AtividadesContext.class,0);
		}
		public AvaliacaoContext avaliacao() {
			return getRuleContext(AvaliacaoContext.class,0);
		}
		public RecursosContext recursos() {
			return getRuleContext(RecursosContext.class,0);
		}
		public TerminalNode FECHA_CHAVE() { return getToken(BricolagemParser.FECHA_CHAVE, 0); }
		public ConformidadeBNCCContext conformidadeBNCC() {
			return getRuleContext(ConformidadeBNCCContext.class,0);
		}
		public ProjetoMakerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projetoMaker; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterProjetoMaker(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitProjetoMaker(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitProjetoMaker(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjetoMakerContext projetoMaker() throws RecognitionException {
		ProjetoMakerContext _localctx = new ProjetoMakerContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_projetoMaker);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(PROJETO_MAKER);
			setState(37);
			match(ABRE_CHAVE);
			setState(38);
			nivel();
			setState(39);
			tema();
			setState(40);
			objetivos();
			setState(41);
			atividades();
			setState(42);
			avaliacao();
			setState(43);
			recursos();
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONFORMIDADE_BNCC) {
				{
				setState(44);
				conformidadeBNCC();
				}
			}

			setState(47);
			match(FECHA_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NivelContext extends ParserRuleContext {
		public TerminalNode NIVEL() { return getToken(BricolagemParser.NIVEL, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(BricolagemParser.DOIS_PONTOS, 0); }
		public TerminalNode STRING() { return getToken(BricolagemParser.STRING, 0); }
		public TerminalNode VIRGULA() { return getToken(BricolagemParser.VIRGULA, 0); }
		public NivelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nivel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterNivel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitNivel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitNivel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NivelContext nivel() throws RecognitionException {
		NivelContext _localctx = new NivelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nivel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(NIVEL);
			setState(50);
			match(DOIS_PONTOS);
			setState(51);
			match(STRING);
			setState(52);
			match(VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemaContext extends ParserRuleContext {
		public TerminalNode TEMA() { return getToken(BricolagemParser.TEMA, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(BricolagemParser.DOIS_PONTOS, 0); }
		public TerminalNode STRING() { return getToken(BricolagemParser.STRING, 0); }
		public TerminalNode VIRGULA() { return getToken(BricolagemParser.VIRGULA, 0); }
		public TemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterTema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitTema(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitTema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemaContext tema() throws RecognitionException {
		TemaContext _localctx = new TemaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tema);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(TEMA);
			setState(55);
			match(DOIS_PONTOS);
			setState(56);
			match(STRING);
			setState(57);
			match(VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjetivosContext extends ParserRuleContext {
		public TerminalNode OBJETIVO_ENSINO() { return getToken(BricolagemParser.OBJETIVO_ENSINO, 0); }
		public List<TerminalNode> DOIS_PONTOS() { return getTokens(BricolagemParser.DOIS_PONTOS); }
		public TerminalNode DOIS_PONTOS(int i) {
			return getToken(BricolagemParser.DOIS_PONTOS, i);
		}
		public List<TerminalNode> ABRE_COLCHETE() { return getTokens(BricolagemParser.ABRE_COLCHETE); }
		public TerminalNode ABRE_COLCHETE(int i) {
			return getToken(BricolagemParser.ABRE_COLCHETE, i);
		}
		public ListaObjetivosEnsinoContext listaObjetivosEnsino() {
			return getRuleContext(ListaObjetivosEnsinoContext.class,0);
		}
		public List<TerminalNode> FECHA_COLCHETE() { return getTokens(BricolagemParser.FECHA_COLCHETE); }
		public TerminalNode FECHA_COLCHETE(int i) {
			return getToken(BricolagemParser.FECHA_COLCHETE, i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(BricolagemParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(BricolagemParser.VIRGULA, i);
		}
		public TerminalNode OBJETIVO_APRENDIZAGEM() { return getToken(BricolagemParser.OBJETIVO_APRENDIZAGEM, 0); }
		public ListaObjetivosAprendizagemContext listaObjetivosAprendizagem() {
			return getRuleContext(ListaObjetivosAprendizagemContext.class,0);
		}
		public TerminalNode OBJETIVO_EDUCACIONAL() { return getToken(BricolagemParser.OBJETIVO_EDUCACIONAL, 0); }
		public ListaObjetivosEducacionaisContext listaObjetivosEducacionais() {
			return getRuleContext(ListaObjetivosEducacionaisContext.class,0);
		}
		public TerminalNode OBJETIVO_PESQUISA() { return getToken(BricolagemParser.OBJETIVO_PESQUISA, 0); }
		public ListaObjetivosPesquisaContext listaObjetivosPesquisa() {
			return getRuleContext(ListaObjetivosPesquisaContext.class,0);
		}
		public ObjetivosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objetivos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterObjetivos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitObjetivos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitObjetivos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjetivosContext objetivos() throws RecognitionException {
		ObjetivosContext _localctx = new ObjetivosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_objetivos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(OBJETIVO_ENSINO);
			setState(60);
			match(DOIS_PONTOS);
			setState(61);
			match(ABRE_COLCHETE);
			setState(62);
			listaObjetivosEnsino();
			setState(63);
			match(FECHA_COLCHETE);
			setState(64);
			match(VIRGULA);
			setState(65);
			match(OBJETIVO_APRENDIZAGEM);
			setState(66);
			match(DOIS_PONTOS);
			setState(67);
			match(ABRE_COLCHETE);
			setState(68);
			listaObjetivosAprendizagem();
			setState(69);
			match(FECHA_COLCHETE);
			setState(70);
			match(VIRGULA);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OBJETIVO_PESQUISA) {
				{
				setState(71);
				match(OBJETIVO_PESQUISA);
				setState(72);
				match(DOIS_PONTOS);
				setState(73);
				match(ABRE_COLCHETE);
				setState(74);
				listaObjetivosPesquisa();
				setState(75);
				match(FECHA_COLCHETE);
				setState(76);
				match(VIRGULA);
				}
			}

			setState(80);
			match(OBJETIVO_EDUCACIONAL);
			setState(81);
			match(DOIS_PONTOS);
			setState(82);
			match(ABRE_COLCHETE);
			setState(83);
			listaObjetivosEducacionais();
			setState(84);
			match(FECHA_COLCHETE);
			setState(85);
			match(VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaObjetivosEnsinoContext extends ParserRuleContext {
		public List<ObjetivoEnsinoContext> objetivoEnsino() {
			return getRuleContexts(ObjetivoEnsinoContext.class);
		}
		public ObjetivoEnsinoContext objetivoEnsino(int i) {
			return getRuleContext(ObjetivoEnsinoContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(BricolagemParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(BricolagemParser.VIRGULA, i);
		}
		public ListaObjetivosEnsinoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaObjetivosEnsino; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterListaObjetivosEnsino(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitListaObjetivosEnsino(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitListaObjetivosEnsino(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaObjetivosEnsinoContext listaObjetivosEnsino() throws RecognitionException {
		ListaObjetivosEnsinoContext _localctx = new ListaObjetivosEnsinoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listaObjetivosEnsino);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(87);
				objetivoEnsino();
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VIRGULA) {
					{
					{
					setState(88);
					match(VIRGULA);
					setState(89);
					objetivoEnsino();
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjetivoEnsinoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BricolagemParser.ID, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(BricolagemParser.DOIS_PONTOS, 0); }
		public TerminalNode STRING() { return getToken(BricolagemParser.STRING, 0); }
		public ObjetivoEnsinoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objetivoEnsino; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterObjetivoEnsino(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitObjetivoEnsino(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitObjetivoEnsino(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjetivoEnsinoContext objetivoEnsino() throws RecognitionException {
		ObjetivoEnsinoContext _localctx = new ObjetivoEnsinoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_objetivoEnsino);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ID);
			setState(98);
			match(DOIS_PONTOS);
			setState(99);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaObjetivosAprendizagemContext extends ParserRuleContext {
		public List<ObjetivoAprendizagemContext> objetivoAprendizagem() {
			return getRuleContexts(ObjetivoAprendizagemContext.class);
		}
		public ObjetivoAprendizagemContext objetivoAprendizagem(int i) {
			return getRuleContext(ObjetivoAprendizagemContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(BricolagemParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(BricolagemParser.VIRGULA, i);
		}
		public ListaObjetivosAprendizagemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaObjetivosAprendizagem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterListaObjetivosAprendizagem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitListaObjetivosAprendizagem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitListaObjetivosAprendizagem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaObjetivosAprendizagemContext listaObjetivosAprendizagem() throws RecognitionException {
		ListaObjetivosAprendizagemContext _localctx = new ListaObjetivosAprendizagemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listaObjetivosAprendizagem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(101);
				objetivoAprendizagem();
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VIRGULA) {
					{
					{
					setState(102);
					match(VIRGULA);
					setState(103);
					objetivoAprendizagem();
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjetivoAprendizagemContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BricolagemParser.ID, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(BricolagemParser.DOIS_PONTOS, 0); }
		public TerminalNode STRING() { return getToken(BricolagemParser.STRING, 0); }
		public ObjetivoAprendizagemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objetivoAprendizagem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterObjetivoAprendizagem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitObjetivoAprendizagem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitObjetivoAprendizagem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjetivoAprendizagemContext objetivoAprendizagem() throws RecognitionException {
		ObjetivoAprendizagemContext _localctx = new ObjetivoAprendizagemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_objetivoAprendizagem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ID);
			setState(112);
			match(DOIS_PONTOS);
			setState(113);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaObjetivosPesquisaContext extends ParserRuleContext {
		public List<ObjetivoPesquisaContext> objetivoPesquisa() {
			return getRuleContexts(ObjetivoPesquisaContext.class);
		}
		public ObjetivoPesquisaContext objetivoPesquisa(int i) {
			return getRuleContext(ObjetivoPesquisaContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(BricolagemParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(BricolagemParser.VIRGULA, i);
		}
		public ListaObjetivosPesquisaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaObjetivosPesquisa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterListaObjetivosPesquisa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitListaObjetivosPesquisa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitListaObjetivosPesquisa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaObjetivosPesquisaContext listaObjetivosPesquisa() throws RecognitionException {
		ListaObjetivosPesquisaContext _localctx = new ListaObjetivosPesquisaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listaObjetivosPesquisa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(115);
				objetivoPesquisa();
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VIRGULA) {
					{
					{
					setState(116);
					match(VIRGULA);
					setState(117);
					objetivoPesquisa();
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjetivoPesquisaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BricolagemParser.ID, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(BricolagemParser.DOIS_PONTOS, 0); }
		public TerminalNode STRING() { return getToken(BricolagemParser.STRING, 0); }
		public ObjetivoPesquisaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objetivoPesquisa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).enterObjetivoPesquisa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BricolagemParserListener ) ((BricolagemParserListener)listener).exitObjetivoPesquisa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BricolagemParserVisitor ) return ((BricolagemParserVisitor<? extends T>)visitor).visitObjetivoPesquisa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjetivoPesquisaContext objetivoPesquisa() throws RecognitionException {
		ObjetivoPesquisaContext _localctx = new ObjetivoPesquisaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_objetivoPesquisa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(ID);
			setState(126);
			match(DOIS_PONTOS);
			setState(127);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
